# FillAgentServer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: t5.md  ufile.md
income_tax_agent/: agent.py  base_info.py  playwright_helper.py  test_server.py  ufile_helper.py
income_tax_agent/ufile/: ufile_helper.py  ufile_t5.py
