[project]
name = "fillagentserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=0.1.0",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt>=2.10.1",
]

[project.scripts]
export-requirements = "uv export --no-hashes --format requirements-txt > requirements.txt"
